--- a/src/components/list.scss
+++ b/src/components/list.scss
@@ -13,3 +13,25 @@
 .lijstje {
     margin: 30px;
 }
+
+.list-item {
+    width: 300px;
+    height: 2em;
+    font-size: 20px;
+}
+
+.list-item:nth-child(odd) {
+    background-color: rgb(207, 181, 207);
+}
+
+.list-item:nth-child(even) {
+    background-color: rgb(90, 71, 90);
+}
+
+.mandje-item:nth-child(odd) {
+    background-color: rgb(69, 69, 100);
+}
+
+.mandje-item:nth-child(even) {
+    background-color: blue;
+}
